# llambda-example

./: Cargo.toml  Makefile  README.md  netlify.toml
src/: handler.rs
