[package]
name = "netlify-example"
version = "0.1.0"
authors = ["Marius Ciubotariu <marius.ciubotariu@gmail.com>"]
edition = "2018"

[dependencies]
netlify_lambda_http = "0.2"
tokio = { version = "1.0.1", features = ["macros"] }
hyper = "0.14.4"
http = "0.2.1"
llambda = "0.1.1"
aws_lambda_events = "0.4"

[[bin]]
name = "netlify-example"
path = "src/main.rs"

[[bin]]
name = "server"
path = "src/server.rs"